[project]
name = "litetune"
version = "0.1.0"
description = ""
authors = [{ name = "Lea Yeh", email = "lea.yeh.ml@gmail.com" }]
requires-python = "~=3.12"
dependencies = [
    "numpy",
    "pandas",
    "matplotlib",
    "scikit-learn",
    "seaborn",
    "torch",
    "datasets",
    "plotly",
    "tqdm",
    "ipywidgets",
    "notebook",
    "jupyterlab",
]

[dependency-groups]
dev = ["pytest>=8.3.5,<9"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"


[tool.hatch.build.targets.wheel]
packages = ["src/litetune"]

[tool.hatch.build.targets.sdist]
packages = ["src/litetune"]